Translate watching button to ru-ru

--- a/public/language/ru/category.json
+++ b/public/language/ru/category.json
@@ -12,5 +12,9 @@
     "ignore": "Игнорировать",
     "watch.message": "Вы теперь следите за обновлениями из этой категории",
     "ignore.message": "Вы теперь игнорируете обновления из этой категории",
-    "watched-categories": "Наблюдаемые категории"
+    "watched-categories": "Наблюдаемые категории",
+    "watching": "Следить",
+    "ignoring": "Игнорировать",
+    "watching.description": "Показать темы в непрочитанных",
+    "ignoring.description": "Не показывать темы в непрочитанных"
 }
